# SaveSyncd

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  flake.nix  runcargo.sh
.github/workflows/: build.yml  docs.yml  test_build.yml
src/: main.rs  tray_app.rs
src/versions/v1/: extdata.rs  mod.rs  save.rs  title.rs
src/versions/v1/download/: begin.rs
src/versions/v1/upload/: begin.rs
