[package]
name = "SaveSyncd"
version = "1.0.0"
edition = "2021"
authors = ["coolguy1842 <coolguy1842@proton.me>"]
license = "GPL3"
description = "Server for syncing saves with the 3DS"
readme = "README.md"
homepage = "https://github.com/coolguy1842/SaveSyncd"
repository = "https://github.com/coolguy1842/SaveSyncd"
keywords = ["daemon", "3ds", "server"]

[dependencies]
ws = { package = "rocket_ws", version = "0.1.1" }
rocket = { version = "0.5.1", features = [ "json" ]}
serde = "1.0.219"
serde_json = "1.0.142"
uuid = { version = "1.18.1", features = [ "v4" ] }
dirs = "6.0.0"
fs_extra = "1.3.0"
md5 = "0.8.0"
tray-icon = "0.21.2"
winit = "0.30.12"
once_cell = "1.21.3"
crossbeam-channel = "0.5.15"
resvg = "0.45.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
